updated styles from display to height

--- a/html/distance-map.html
+++ b/html/distance-map.html
@@ -52,7 +52,7 @@
   </div>
 </div>
 
-<div id="data-table-trivariate-wrapper-distance" style="display: none">
+<div id="data-table-trivariate-wrapper-distance" style="height: 0; overflow: hidden;">
   <table
     id="data-table-trivariate-distance"
     style="width: 100%; display: table"
