--- a/html/scrolly-map-toggle-table.html
+++ b/html/scrolly-map-toggle-table.html
@@ -8,4 +8,4 @@
     <span class="cher-link-text">Table toggle</span>
   </label>
 </div>
-<section id="data-table-container" style="display: none"></section>
+<section id="data-table-container" style="height: 0; overflow: hidden;"></section>
