--- a/html/social-map.html
+++ b/html/social-map.html
@@ -51,6 +51,6 @@
   </div>
 </div>
 
-<div id="data-table-trivariate-wrapper" style="display: none">
+<div id="data-table-trivariate-wrapper" style="height: 0; overflow: hidden;">
   <table id="data-table-trivariate" style="width: 100%; display: table"></table>
 </div>
