--- a/html/access-map.html
+++ b/html/access-map.html
@@ -51,7 +51,7 @@
   </div>
 </div>
 
-<div id="data-table-trivariate-wrapper-access" style="display: none">
+<div id="data-table-trivariate-wrapper-access" style="height: 0; overflow: hidden;">
   <table
     id="data-table-trivariate-access"
     style="width: 100%; display: table"
