--- a/html/social-map.html
+++ b/html/social-map.html
@@ -29,28 +29,21 @@
     <div id="observablehq-numCounties-2efbcca2"></div>
     <div id="observablehq-tableData-2efbcca2"></div>
   </div>
-  <span
-    style="border-radius: 50%; background-color: black; width: 6px; height: 6px"
-  ></span>
+  <span style="border-radius: 50%; background-color: black; width: 6px; height: 6px"></span>
   <div class="observable-flex-child-2-2">
     <div class="toggle-container">
-      <label for="toggle-table-trivariate" class="toggle-label"
-        ><strong>Show data table</strong
-        ><span class="sr-only">for social risk factors</span></label
-      >
-      <label class="switch">
-        <input
-          type="checkbox"
-          id="toggle-table-trivariate"
-          autocomplete="off"
-        />
-        <span class="slider round animation-slider"></span>
-	<span class="cher-link-text">Table toggle</span>
+      <label for="toggle-table-trivariate" class="toggle-label"><strong>Show data table</strong><span
+          class="sr-only">for social risk factors</span>
+        <div class="switch">
+          <input type="checkbox" id="toggle-table-trivariate" autocomplete="off" />
+          <span class="slider round animation-slider"></span>
+          <span class="cher-link-text">Table toggle</span>
+        </div>
       </label>
     </div>
   </div>
 </div>
 
-<div id="data-table-trivariate-wrapper" style="height: 0; overflow: hidden;">
+<div id="data-table-trivariate-wrapper" style="height: 0; overflow: hidden; overflow-x: auto;">
   <table id="data-table-trivariate" style="width: 100%; display: table"></table>
 </div>
