--- a/html/distance-map.html
+++ b/html/distance-map.html
@@ -30,31 +30,21 @@
     <div id="observablehq-numCounties-c797d0e6"></div>
     <div id="observablehq-tableData-c797d0e6"></div>
   </div>
-  <span
-    style="border-radius: 50%; background-color: black; width: 6px; height: 6px"
-  ></span>
+  <span style="border-radius: 50%; background-color: black; width: 6px; height: 6px"></span>
   <div class="observable-flex-child-2-2">
     <div class="toggle-container">
-      <label for="toggle-table-trivariate-distance" class="toggle-label"
-        ><strong>Show data table</strong
-        ><span class="sr-only">for distance to CVI care providers</span></label
-      >
-      <label class="switch">
-        <input
-          type="checkbox"
-          id="toggle-table-trivariate-distance"
-          autocomplete="off"
-        />
-        <span class="slider round animation-slider"></span>
-	<span class="cher-link-text">Table toggle</span>
+      <label for="toggle-table-trivariate-distance" class="toggle-label"><strong>Show data table</strong><span
+          class="sr-only">for distance to CVI care providers</span>
+        <div class="switch">
+          <input type="checkbox" id="toggle-table-trivariate-distance" autocomplete="off" />
+          <span class="slider round animation-slider"></span>
+          <span class="cher-link-text">Table toggle</span>
+        </div>
       </label>
     </div>
   </div>
 </div>
 
-<div id="data-table-trivariate-wrapper-distance" style="height: 0; overflow: hidden;">
-  <table
-    id="data-table-trivariate-distance"
-    style="width: 100%; display: table"
-  ></table>
+<div id="data-table-trivariate-wrapper-distance" style="height: 0; overflow: hidden; overflow-x: auto;">
+  <table id="data-table-trivariate-distance" style="width: 100%; display: table"></table>
 </div>
