removed sr text

--- a/html/animation-toggle.html
+++ b/html/animation-toggle.html
@@ -6,11 +6,10 @@
 	<div class="toggle-container">
 		<label for="scrollToggle" class="toggle-label">
 			<strong>Animations are</strong>
-		</label>
-		<label class="switch toggle">
+		<div class="switch toggle">
 			<input type="checkbox" id="scrollToggle" checked="true" />
 			<span class="slider round animation-slider"></span>
-			<span class="cher-link-text">Animation toggle</span>
+		</div>
 		</label>
 	</div>
 </div>
