colon inside strong tag

--- a/html/access-map-legend.html
+++ b/html/access-map-legend.html
@@ -31,7 +31,7 @@
 							<div class="wp-block-column is-vertically-aligned-top is-layout-flow"
 								style="flex-basis: 50%">
 								<p>
-									<strong>Uninsured %</strong>: Percentage of adults under age 65 without
+									<strong>Uninsured %:</strong> Percentage of adults under age 65 without
 									health insurance
 								</p>
 
@@ -42,7 +42,7 @@
 								</ul>
 
 								<p>
-									<strong>Access to physicians</strong>: Primary care physicians per
+									<strong>Access to physicians:</strong> Primary care physicians per
 									100,000 population
 								</p>
 
