--- a/html/social-map-legend.html
+++ b/html/social-map-legend.html
@@ -30,7 +30,7 @@
 							<div class="wp-block-column is-vertically-aligned-top is-layout-flow"
 								style="flex-basis: 50%">
 								<p>
-									<strong>Poverty rate</strong>: Percentage of population living below
+									<strong>Poverty rate:</strong> Percentage of population living below
 									poverty level
 								</p>
 
@@ -41,7 +41,7 @@
 								</ul>
 
 								<p>
-									<strong>Access to transportation</strong>: The Transportation Access
+									<strong>Access to transportation:</strong> The Transportation Access
 									Score measures access to public transportation and vehicle ownership
 									rate.
 								</p>
